mlflow/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
  namespace: mlflow
  labels:
    app: mlflow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: mlflow-tracking
        image: ghcr.io/mlflow/mlflow
        ports:
        - containerPort: 5000
        command: ["/bin/sh","-c"]
        args: ["apt-get -y update && apt-get -y install python3-dev build-essential pkg-config && pip install --upgrade pip && pip install psycopg2-binary boto3; mlflow server --host 0.0.0.0 --port 5000 --backend-store-uri postgresql://user:password@server:5432/database"]
