mlflow/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-tracking-service
  namespace: mlflow
  labels:
    app: mlflow-tracking-service
spec:
  type: ClusterIP
  selector:
    app: mlflow
  ports:
  - name: tcp
    protocol: TCP
    port: 5000
    targetPort: 5000
